methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:78: error: not found: value DebutFin
      DebutFin()
      ^